Fixed Glossary spacing

--- a/css/main.css
+++ b/css/main.css
@@ -305,6 +305,7 @@ PAGE: Glossary
 #gsubject {
 	color: #1F7395;
 	font-weight: bold;
+	margin-right: 1%;
 }
 
 #gcontent {
